--- a/JSProjects/Amazon-clone/checkout.html
+++ b/JSProjects/Amazon-clone/checkout.html
@@ -52,7 +52,7 @@
           </div>
 
           <div class="payment-summary-row">
-            <div>Items (3):</div>
+            <div class="js-order-summary-items">Items (0):</div>
             <div class="payment-summary-money">$42.75</div>
           </div>
 
