--- a/16 Projects for beginners/4. Real-time Character Counter/index.html
+++ b/16 Projects for beginners/4. Real-time Character Counter/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <h2>Real-time Character Counter</h2>
+        <textarea id="textarea" class="textarea" placeholder="Please write your text here..." maxlength="50"></textarea>
+        <div class="counter-container">
+            <p>Total Characters: <span class="total-counter" id="total-counter"></span></p>
+            <p>Remaining: <span class="remaining-counter" id="remaining-counter"></span></p>
+        </div>
+
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
